<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2014 ohmage

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">ohmage</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">navigation drawer open</string>
    <string name="drawer_close">navigation drawer closed</string>
    <string name="action_help">help</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="network_error">Network Error. Try again later.</string>
    <string name="account_error">Unexpected Error. Try to login with a different account.</string>
    <string name="google_progress_message">Signing in to Google…</string>
    <string name="logging_out">Logging Out…</string>
    <string name="cancel">Cancel</string>
    <string name="show_choices">Show Choices</string>
    <string name="take_image">Take Image</string>
    <string name="record_video">Record Video</string>
    <string name="launch">Launch</string>
    <string name="audio_prompt_max_duration_reached">You have reached the maximum duration.</string>
    <string name="audio_prompt_max_filesize_reached">You have reached the maximum filesize.</string>
    <string name="media_unavailable_to_record_audio">Please insert an SD card before recording audio.</string>
    <string name="title_create_account">Create Account</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_email_hint">Enter your E\u2011mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_hint">Enter your password</string>
    <string name="create_password_hint">Enter a password</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_fullname_hint">Your real name</string>
    <string name="action_create">Create Account</string>
    <string name="action_create_short">Create</string>
    <string name="error_field_required">This field is required</string>
    <string name="account_creation_progress">Creating Account…</string>
    <string name="sign_in_with_email">Sign in with E\u2011mail</string>
    <string name="sign_up_with_ohmage">Create Account</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="unknown_error">Unknown error. Please try again later. Send feedback to us if this continues to happen.</string>
    <string name="create_ohmage_account_title">Create an ohmage account</string>
    <string name="sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_credentials">Invalid E\u2011mail or password, please try again.</string>
    <string name="error_invalid_email_address">Invalid E\u2011mail Address</string>
    <string name="title_account_not_activated">Account Not Activated</string>
    <string name="message_account_not_activated">Your account has not been activated. You won\'t be able to sync your data with the server until you activate your account by clicking the link in the registration E\u2011mail sent by ohmage.</string>
    <string name="account_not_activated">Activate your account by clicking the link in the E-mail from ohmage</string>
    <string name="action_search">Search</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_ohmlet">Ohmlet</string>
    <string name="hello_world">Hello world!</string>
    <string name="join">Join</string>
    <string name="no_surveys">No Surveys</string>
    <string name="skip">Skip</string>
    <string name="responses">Responses</string>
    <string name="survey_conditions_error">The conditions for this survey are not set correctly.</string>
    <string name="discard">Discard</string>
    <string name="discard_survey_message">This survey will not be saved</string>
    <string name="discard_survey_title">Discard Survey?</string>
    <string name="install_apps_for_stream_title">Install stream applications</string>
    <string name="install_app_for_stream_message">%s requires an additional app.</string>
    <string name="install_multiple_apps_for_stream_message">%s streams require additional apps.</string>
    <string name="install_apps_for_survey_title">Install survey dependencies</string>
    <string name="install_apps_for_survey_message">An additional app is required to take surveys.</string>
    <string name="install_multiple_apps_for_surveys_message">%s additional apps are required to take surveys.</string>
    <string name="no_app_to_install_error">Can\'t find application to install</string>
    <string name="remote_prompt_missing_app_definition">This prompt is missing an app definition</string>
    <string name="remote_prompt_launch_error">Prompt can\'t be launched</string>
    <string name="no_survey_apps">No survey apps to install</string>
    <string name="required_apps_header">Required</string>
    <string name="installed_apps_header">Installed</string>
    <string name="no_streams">No streams</string>
    <string name="install_dependencies_title">Install Dependencies</string>
    <string name="title_stream_not_authorized">Authorization Failed</string>
    <string name="message_stream_not_authorized">There was an error authorizing %1$s: %2$s</string>
    <string name="oauth_no_data">Invalid use of OAuthActivity</string>
    <string name="oauth_missing_client_id">client_id must be specified</string>
    <string name="oauth_missing_scope">scope must be specified</string>
    <string name="oauth_invalid_scope">Invalid scope: %s</string>
    <string name="oauth_missing_redirect_uri">redirect_uri must be specified</string>
    <string name="oauth_no_account">Must be logged in</string>
    <string name="oauth_server_error_for_client_info">Error reading client info from the server</string>
    <string name="oauth_invalid_redirect_url">Invalid redirect url</string>
    <string name="oauth_no_scopes_error">You must allow at least one permission</string>
    <string name="oauth_server_error_authorizing">Error authorizing with the server</string>
    <string name="survey_not_found">Survey could not be loaded</string>

</resources>
